# sets-warp

./: .SETS_settings.ini  .env  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  ML_PIPELINE.md  PROJECT_CONTEXT.md  README.md  SETS.bat  SETS.sh  bootstrap.py  gitignore  launch.vbs  main.py  migrate_sister_data.py  pyproject.toml  sets_warp.bat  sets_warp.sh  updater.py  upload_migrated_crops.py
.claude/agents/: gemini-researcher.md
.config/: .autosave.json
.config/cache/: alt_images.json  github_tree_cache.json  ground_doffs.json  images_failed.json  images_list.json  modifiers.json  ships.json  space_doffs.json  starship_traits.json  traits.json
.config/cargo/: doffs.json  equipment.json  modifiers.json  ship_list.json  starship_traits.json  traits.json
.github/workflows/: build_installer.yml  release.yml
SETS-WARP/src/: __init__.py  buildupdater.py  callbacks.py  datafunctions.py  downloader.py  (+4 more)
docs/: ML_PIPELINE.md  SETS_GUIDE.md  WARP_GUIDE.md  backlog.md  src_patches.md  sto_slots_rules.md  warp_core.md  warp_ml_roadmap.md  warp_separation_roadmap.md
installer/: install_desktop.sh  sets_warp.iss
scripts/: upstream_sync.py
src/: app.py  background_tasks.py  buildupdater.py  callbacks.py  constants.py  datafunctions.py  downloader.py  export.py  imagemanager.py  iofunc.py  setsdebug.py  splash.py  syncmanager.py  widgets.py
tests/: test_community_anchors.py  test_text_extractor.py
warp/: app.py  config.py  hub_token.txt  sto_slots_rules.md  style.py  ui_helpers.py  updater.py  warp_button.py  warp_core.md  warp_dialog.py  warp_importer.py
(+33 files in other folders)
